// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownEngine basic 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<h2></h2>
<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">alpha</span></div>
<a href=\\"file:///var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-91482-HrDQWaEjho52/vault1/alpha.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">&#x2192;</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        
<h1>Header1</h1>
<p>body1</p>
<h1>Header2</h1>
<p>body2</p>
</div>    
</div>
<p><code>code span</code>some text</p>
",
  "markdown": "((ref:[[alpha]]))
---

\`code span\`some text",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine basic wiki link 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<p><a href=\\"file:///var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-91482-WbkbYlVet8np/vault1/foo.md\\">foo</a></p>
",
  "markdown": "[[foo]]",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine rel link 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<p><a href=\\"file:///var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-91482-UpipZsgoi1md/vault1/foobar.md\\">foobar</a></p>
",
  "markdown": "[[foobar#rel-link]]",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine with header 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<h2></h2>
<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">alpha</span></div>
<a href=\\"file:///Users/kevinlin/projects/dendronv2/ref/mume/vault1/alpha.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">&#x2192;</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        
<h1>Header1</h1>
<p>body1</p>
<h1>Header2</h1>
<p>body2</p>
</div>    
</div>
<p><code>code span</code>some text</p>
",
  "markdown": "((ref:[[alpha]]#Header1))
---

\`code span\`some text",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine with header offset 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<h2></h2>
<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">alpha</span></div>
<a href=\\"file:///Users/kevinlin/projects/dendronv2/ref/mume/vault1/alpha.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">&#x2192;</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        
<p>body1</p>
<h1>Header2</h1>
<p>body2</p>
</div>    
</div>
<p><code>code span</code>some text</p>
",
  "markdown": "((ref:[[alpha]]#Header1,1))
---

\`code span\`some text",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;

exports[`MarkdownEngine with wildcard 1`] = `
Object {
  "JSAndCssFiles": Array [],
  "html": "<h2></h2>
<div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">alpha</span></div>
<a href=\\"file:///Users/kevinlin/projects/dendronv2/ref/mume/vault1/alpha.md\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">&#x2192;</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div>        
<h1>Header1</h1>
<p>body1</p>
</div>    
</div>
<p><code>code span</code>some text</p>
",
  "markdown": "((ref:[[alpha]]#Header1:#*))
---

\`code span\`some text",
  "tocHTML": "",
  "yamlConfig": Object {},
}
`;
